@@ -1,3 +1,10 @@
+                    Changes made to Pyjamas since 0.5
+                    ---------------------------------
+
+ * pyjslib.Dcit now use the hash method to generate keys internally,
+   so it si possible to use objects as keys like in python. For
+   limitations on dicts read examples/libtest/DictTest.py
+
                     Changes made to Pyjamas since 0.4
                     ---------------------------------
 
